# AI_solo_coder_task_B_126

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  test_output.txt
backend/src/: acoustic_simulator.rs  alarm_mqtt.rs  alert_service.rs  casting_simulator.rs  config.rs  config_loader.rs  db.rs  dtu_receiver.rs  handlers.rs  lib.rs  main.rs  message_bus.rs  metrics_collector.rs  models.rs  mqtt_client.rs
backend/src/alloy_analyzer/: mod.rs
backend/src/compute_pool/: mod.rs
backend/src/process_comparator/: mod.rs
backend/src/simulation/: acoustic.rs  alloy_comparison.rs  casting.rs  casting_comparison.rs  mod.rs  tower_acoustic.rs  virtual_strike.rs
backend/src/simulation/alloy_analyzer/: core.rs  mod.rs
backend/src/tower_acoustics/: mod.rs
backend/src/vr_bell_strike/: mod.rs
backend/tests/: feature_tests.rs  integration_test.rs
clickhouse/: init.sql
config/: .env.example  acoustic_params.json  clickhouse-config.xml  materials.json  mosquitto.conf  nginx.conf  prometheus.yml
frontend/: acoustic_panel.js  alloy_analyzer.js  app.js  bell_3d.js  feature_modules.js  index.html  process_comparator.js  sound_field_worker.js  tower_acoustics.js  vr_bell_strike.js
simulator/: Dockerfile  bell_simulator.py
