[package]
name = "bell-casting-backend"
version = "1.0.0"
edition = "2021"
description = "古代铸钟工艺仿真与钟声传播模拟系统 - Rust后端"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clickhouse = { version = "0.11", features = ["uuid"] }
rumqttc = { version = "0.22" }
rand = "0.8"
nalgebra = "0.32"
num-traits = "0.2"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
once_cell = "1.19"
include_dir = "0.7"
metrics = "0.22"
metrics-exporter-prometheus = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
